syntax = "proto3";      // 声明了protobuf的版本

package fixbug;         // 声明了代码所在的包(对于C++来说是namespace)

// 定义下面的选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;

message ResultCode
{
    int32 errcode = 1;
    bytes errmsg = 2;
}

// 定义登陆请求消息类型 name pwd
message LoginRequest
{
    bytes name = 1;  // 对于字符串 使用tytes代替string 提高效率
    bytes pwd = 2;
    map<int32, string> test = 3;  // 生成文件后与map使用一样
}

// 定义登录响应消息类型
message LoginResponse
{
    ResultCode result = 1;
    bool success = 2;
}

message GetFriendListsRequest
{
    uint32 userid = 1;
}

message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex{
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListsResponse
{
    ResultCode result = 1;
    repeated User friend_list = 2;  // 存储多个user 定义一个列表类型
}

// 在protobuf里面如何定义描述rpc方法的类型 - service: 服务  也回生成一个类
service UserServiceRPC
{
    // RPC方法的描述
    // 参数为LoginRequest 返回为LoginResponse
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}